--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://victorheringer.github.io/karasuno-nest",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
