--- a/.env-sample
+++ b/.env-sample
@@ -1,10 +1,6 @@
 REACT_APP_DATABASE=database
 REACT_APP_HOST=http://localhost:3000
-REACT_APP_SHARE_LINK=http://localhost:3000
-REACT_APP_BUCKET_URL=https://bucket.com
-REACT_APP_BUCKET_ACCESS_KEY=access-key
-RECT_APP_BUCKET_SECRETE_ACCESS_KEY=secrete-key
-REACT_APP_BUCKET_REGION=region
-REACT_APP_BUCKET_ENDPOINT=https://bucket.com
-REACT_APP_BUCKET_NAME=bucket-name
-REACT_APP_BUCKET_ACL=bucket-acl
+BUILD_PATH=./docs
+REACT_APP_REMOTE_JSON_URL=https://raw.githubusercontent.com
+REACT_APP_ACHIEVIMENTS_FILE_NAME=achievements.json
+REACT_APP_BOARD_FILE_NAME=board.json
